[gd_scene load_steps=7 format=3 uid="uid://cleu24ad0vyer"]

[ext_resource type="Script" path="res://Scripts/menu_multiplayer.gd" id="1_cetal"]

[sub_resource type="SystemFont" id="SystemFont_22y4j"]
font_names = PackedStringArray("ComicShannsMono Nerd Font")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_y4db1"]
font_names = PackedStringArray("ComicShannsMono Nerd Font")
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jcucj"]
bg_color = Color(0, 0, 0, 0.392157)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mkjjp"]
bg_color = Color(0, 0, 0, 0.490196)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eds08"]
bg_color = Color(0, 0, 0, 0.686275)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Multiplayer" type="Node2D"]
script = ExtResource("1_cetal")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.14902, 0.196078, 0.254902, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = SubResource("SystemFont_22y4j")
theme_override_font_sizes/font_size = 86
text = "Knight UP!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Connect" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = SubResource("SystemFont_y4db1")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_jcucj")
theme_override_styles/hover = SubResource("StyleBoxFlat_mkjjp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_eds08")
text = "Join"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Host" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = SubResource("SystemFont_y4db1")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_jcucj")
theme_override_styles/hover = SubResource("StyleBoxFlat_mkjjp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_eds08")
text = "Host"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = SubResource("SystemFont_y4db1")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_jcucj")
theme_override_styles/hover = SubResource("StyleBoxFlat_mkjjp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_eds08")
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/Back" to="." method="_on_back_pressed"]
